crates/px4-workqueue/tests/trybuild/fail/unknown_arg.stderr
error: unknown #[task] argument `priority` (expected `wq`)
 --> tests/trybuild/fail/unknown_arg.rs:5:22
  |
5 | #[task(wq = "test1", priority = "high")]
  |                      ^^^^^^^^
